--- a/data/com.github.ronnydo.colorpicker.desktop
+++ b/data/com.github.ronnydo.colorpicker.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Color Picker
-Comment=The one and only Color Picker to speed professionals workflow.
+Comment=The one and only Color Picker to speed up professionals workflow.
 Categories=Utility;
 Exec=com.github.ronnydo.colorpicker
 Icon=application-default-icon
