--- a/meson.build
+++ b/meson.build
@@ -1,14 +1,20 @@
 project('com.github.ronnydo.colorpicker', ['vala', 'c'],
-    version: '0.1.2'
+    version: '0.1.2',
+    license: 'GPL-3.0'
 )
 
 gnome = import('gnome')
-#i18n = import('i18n')
+i18n = import('i18n')
 
 conf = configuration_data()
 conf.set_quoted('GETTEXT_PACKAGE', meson.project_name())
 configure_file(output: 'config.h', configuration: conf)
 config_h_dir = include_directories('.')
+
+
+c_args = [
+  '-include', 'config.h'
+]
 
 executable(
     'com.github.ronnydo.colorpicker',
@@ -18,6 +24,7 @@ executable(
     'src/Widgets/ColorArea.vala',
     'src/Widgets/ColorHistory.vala',
     'src/Widgets/MousePosition.vala',
+    c_args: c_args,
     dependencies: [
         dependency('granite'),
         dependency('gtk+-3.0'),
@@ -28,4 +35,4 @@ executable(
 #meson.add_install_script('meson/post_install.py')
 
 subdir('data')
-#subdir('po')
+subdir('po')
