--- a/data/com.github.ronnydo.colorpicker.desktop
+++ b/data/com.github.ronnydo.colorpicker.desktop
@@ -3,7 +3,7 @@ Name=Color Picker
 Comment=The one and only Color Picker to speed up professionals workflow.
 Exec=com.github.ronnydo.colorpicker
 Icon=com.github.ronnydo.colorpicker
-Keywords=color;picker;selector;pipette
+Keywords=color;picker;selector;pipette;
 Terminal=false
 Type=Application
-Categories=GTK;Utility;Graphics;Development
+Categories=GTK;Utility;Graphics;Development;
