--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,10 @@ Source: com.github.ronnydo.colorpicker
 Section: x11
 Priority: extra
 Maintainer: Ronny Dobra <ronnydobra at arcor dot de>
-Build-Depends: cmake (>= 2.8),
-               debhelper (>= 9),
+Build-Depends: debhelper (>= 9),
                libgranite-dev,
                libgtk-3-dev,
+               meson
                valac
                
 Standards-Version: 3.9.3
