--- a/data/com.github.ronnydo.colorpicker.desktop
+++ b/data/com.github.ronnydo.colorpicker.desktop
@@ -3,7 +3,7 @@ Name=Color Picker
 Comment=An intuitive Color Picker
 Exec=com.github.ronnydo.colorpicker
 Icon=com.github.ronnydo.colorpicker
-Keywords=color;picker;selector;pipette;
+Keywords=colorpicker;color;picker;selector;pipette;
 Terminal=false
 Type=Application
 Categories=GTK;Utility;Graphics;Development;
