--- a/data/meson.build
+++ b/data/meson.build
@@ -15,6 +15,8 @@ install_data(
 i18n.merge_file(
     input: meson.project_name() + '.desktop.in',
     output: meson.project_name() + '.desktop',
+    type: 'desktop',
+    install: true,
     po_dir: join_paths(meson.source_root(), 'po', 'extra'),
     install_dir: join_paths(get_option('datadir'), 'applications')
 )
@@ -22,6 +24,7 @@ i18n.merge_file(
 i18n.merge_file(
     input: meson.project_name() + '.appdata.xml.in',
     output: meson.project_name() + '.appdata.xml',
+    install: true,
     po_dir: join_paths(meson.source_root(), 'po', 'extra'),
     install_dir: join_paths(get_option('datadir'), 'metainfo')
 )
