--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,11 @@ project('com.github.ronnydo.colorpicker', ['vala', 'c'],
 gnome = import('gnome')
 i18n = import('i18n')
 
+add_project_arguments(
+    '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
+    language: 'c'
+)
+
 conf = configuration_data()
 conf.set_quoted('GETTEXT_PACKAGE', meson.project_name())
 configure_file(output: 'config.h', configuration: conf)
