--- a/po/meson.build
+++ b/po/meson.build
@@ -1,1 +1,11 @@
-i18n.gettext(meson.project_name(), preset: 'glib')
+# Install main translations
+i18n.gettext (meson.project_name (),
+    args: [
+        '--directory=' + meson.source_root (),
+        '--from-code=UTF-8',
+        '-cTRANSLATORS'
+    ],
+    preset: 'glib'
+)
+
+subdir ('extra')
